@@ -1,3 +1,8 @@
+2002-12-06  Larry Ewing  <lewing@ximian.com>
+
+	* htmlengine-edit-table.h (html_table_insert_column): fix the insert
+	row/column prototypes so that gtkhtml builds again.
+
 2002-12-06  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine-edit-table.c (html_table_insert_column): make it work
